Move fixture files back to where they _should_ be

--- a/fixture/tsconfig.json
+++ b/fixture/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "rootDir": "."
   },
-  "include": ["fixture/file.ts", "fixture/react.tsx"]
+  "include": ["file.ts", "react.tsx"]
 }
