--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ts-eslint-starter",
-  "version": "1.0.0",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "description": "",
   "main": "index.js",
@@ -10,7 +11,7 @@
   },
   "wireit": {
     "build": {
-      "command": "tsc --build --pretty",
+      "command": "tsc --pretty",
       "files": [
         "src/**/*.ts",
         "tsconfig.json"
@@ -28,13 +29,15 @@
       "dependencies": [
         "build"
       ],
-      "files": [],
+      "files": [
+        "fixture/**/*"
+      ],
       "output": []
     }
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@typescript-eslint/parser": "^6.19.0",
@@ -44,7 +47,6 @@
   },
   "dependencies": {
     "@types/eslint": "^8.56.2",
-    "@typescript-eslint/utils": "^6.19.0",
-    "eslint": "^8.56.0"
+    "@typescript-eslint/utils": "^6.19.0"
   }
 }
